   // version of protocol buffer used
    syntax = "proto3";

    // package name for the buffer will be used later
    package hello;

    // argument
    message SayRequest {
    // data type and position of data
      string name = 1;
    }

    // return value
    message SayResponse {
    // data type and position of data
      string message = 1;
    }

    service Say {
    // function which can be called
      rpc send (SayRequest) returns (SayResponse);
      rpc take (SayRequest) returns (SayResponse);
    }
