   // version of protocol buffer used
    syntax = "proto3";

    // package name
    package echo;
    //Input type
    message EchoRequest {
    // data type and position of data
      string message = 1;
    }

    // return value
    message EchoResponse {
    // data type and position of data
      string message = 1;
    }

    service Echo {
      rpc echo (EchoRequest) returns (EchoResponse);
    }
